init payment-details, step two

--- a/src/app/features/authentication/register/register-form/register-form.component.html
+++ b/src/app/features/authentication/register/register-form/register-form.component.html
@@ -102,8 +102,27 @@
         <div *ngIf="f.fiscal_code.errors.InvalidFiscalCode">Please insert a valid fiscal code</div>
       </div>
 
-    </div> <!-- Fiscal code -->
-  </div> <!-- Fiscal Code -->
+
+    </div>
+
+    <div class="input-group mb-3 col-md-6">
+      <div class="input-group-prepend">
+        <!--<span class="input-group-text">@</span>-->
+        <span class="input-group-text"><i class="fab fa-paypal"></i></span>
+      </div>
+      <input type="text" formControlName="email_paypal" class="form-control" placeholder="Email Paypal"
+             [ngClass]="{ 'is-invalid': submitted && f.email_paypal.errors }"/>
+
+      <div *ngIf="submitted && f.email_paypal.errors" class="invalid-feedback">
+        <!--<div *ngIf="f.email_paypal.errors.required">Email is required</div>-->
+        <div *ngIf="f.email_paypal.errors.email">Please insert a valid email</div>
+      </div>
+
+
+    </div> <!-- Mail Paypal -->
+  </div>
+
+
   <div class="form-row">
     <div class="input-group mb-3 col-md-6">
       <div class="input-group-prepend">
