--- a/src/app/features/reserved-area/personal-info/personal-info.component.html
+++ b/src/app/features/reserved-area/personal-info/personal-info.component.html
@@ -1,7 +1,7 @@
 <div class="form-inline mb-2">
 </div>
 
-<form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="updateRegistration" (ngSubmit)="onSubmit()">
 
   <div *ngIf="this.selectedUser === 2">
     <div class="form-row">
