payment-details done

--- a/src/app/features/reserved-area/payment-details/payment-details.component.html
+++ b/src/app/features/reserved-area/payment-details/payment-details.component.html
@@ -1,5 +1,5 @@
 <!--<form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">-->
-  <form [formGroup]="paymentForm" >
+  <form [formGroup]="paymentForm" class="col-sm-12">
 
   <div *ngIf="this.selectedUser === 2">
     <div class="form-row">
@@ -14,7 +14,7 @@
           <span class="input-group-text"><i class="icon-briefcase"></i></span>
         </div>
         <input type="text" formControlName="company_name" class="form-control" placeholder="Company Name"
-               [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }"/>
+               [ngClass]="{ 'is-invalid': submitted && f.company_name.errors }"/>
 
         <div *ngIf="this.submitted && f.company_name.errors" class="invalid-feedback">
           <div *ngIf="f.company_name.errors.required">Company Name is required</div>
@@ -25,7 +25,7 @@
           <span class="input-group-text"><i class="icon-chart"></i></span>
         </div>
         <input type="text" formControlName="vat_number" class="form-control" placeholder="Vat Number" required
-               [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }"/>
+               [ngClass]="{ 'is-invalid': submitted && f.vat_number.errors }"/>
 
         <div *ngIf="this.submitted && f.vat_number.errors" class="invalid-feedback">
           <div *ngIf="f.vat_number.errors.required">Vat Number is required</div>
@@ -46,7 +46,7 @@
         <span class="input-group-text"><i class="icon-user"></i></span>
       </div>
       <input type="text" formControlName="first_name" class="form-control" placeholder="First Name"
-             [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }"/>
+             [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }"/>
 
       <div *ngIf="submitted && f.first_name.errors" class="invalid-feedback">
         <div *ngIf="f.first_name.errors.required">First Name is required</div>
@@ -101,7 +101,7 @@
 
       <div *ngIf="submitted && f.email_paypal.errors" class="invalid-feedback">
         <!--<div *ngIf="f.email_paypal.errors.required">Email is required</div>-->
-        <div *ngIf="f.email_paypal.errors.email">Please insert a valid email</div>
+        <div *ngIf="f.email_paypal.errors">Please insert a valid email</div>
       </div>
 
 
@@ -173,7 +173,6 @@
       </div>
     </div>
   </div> <!-- Province and Zip Code-->
-    <button [disabled]="loading" class="btn btn-block btn-success" (click)="openModal(template)">Save change</button>
 
     <ng-template #template>
       <div class="modal-header">
@@ -191,7 +190,8 @@
                   type="text" min="10" max="50" />
           <div >
             <div style="color: #bd0a0d;
-                            text-align: center"  *ngIf="g.password.errors">Wrong Password!</div>
+                            text-align: center"  *ngIf="done && g.password.errors">Insert Password!</div>
+            <div style="color: #bd0a0d; text-align: center"  *ngIf="!successPassword && done">Incorrect Password, try again.</div>
           </div>
         </div>
       </form>
@@ -203,3 +203,9 @@
     </ng-template>
    <!-- Password and repeated password -->
 </form>
+
+<div class="modal-footer col-md-12">
+  <button class="btn  btn-danger col-md-6" (click)="goToShowcase()">Go to shopping</button>
+  <button class="btn  btn-success col-md-6" (click)="openModal(template)">Save change</button>
+</div>
+
