coupon token done

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -40,7 +40,9 @@
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">My purchases</span>
         </a>
-
+        <a [routerLink]="['/reserved-area/consumer/coupon-token']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">Get Coupon by Token</span>
+        </a>
       </div>
 
       <a class="list-group-item list-group-item-action text-secondary">
