--- a/src/app/features/reserved-area/consumer/payment-confirm/payment-confirm.component.html
+++ b/src/app/features/reserved-area/consumer/payment-confirm/payment-confirm.component.html
@@ -1,4 +1,4 @@
-<div  *ngIf="user !== undefined && cartArray.length !== 0" class="container">
+<div  *ngIf="user !== undefined && (cartArray !== null)" class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <div class="card mx-12" style="padding: 5px">
