--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -25,28 +25,28 @@
     <th style="width: 10%">Image</th>
     <th style="width: 10%">Price</th>
     <th style="width: 10%">Unities</th>
-    <!--<th style="width: 10%">Sold</th>-->
-    <th style="width: 5%"></th>
-    <th style="width: 5%"></th>
+    <th style="width: 10%">State</th>
+    <th style="width: 10%"></th>
+    <th style="width: 10%"></th>
   </tr>
   </thead>
 
   <tbody>
   <tr *ngFor="let coupon of coupons">
     <td>
-      <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-      <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+      <span style="width: 40%; font-size: 17px;">{{coupon.title}}</span> <br/>
+      <i style="width: 10%; color: #999; font-size: 15px;">{{coupon.description}}</i>
     </td>
     <td>
-      <img class="img-thumbnail crop centered-and-cropped"   [src]="imageUrl(coupon.image)" alt="Card image cap">
+      <img  class=" img-thumbnail crop centered-and-cropped"   [src]="imageUrl(coupon.image)" alt="Card image cap">
     </td>
     <!--<td>{{coupon.price != 0 ? coupon.price : 'free'}}</td>-->
-    <td>{{formatPrice(coupon.price)}}</td>
-    <td>{{coupon.quantity}}</td>
-    <td>0</td>
+    <td style="width: 10%;">{{formatPrice(coupon.price)}}</td>
+    <td style="width: 10%;">{{coupon.quantity}}</td>
+    <td style="width: 10%;">{{coupon.state}}</td>
 
 
-    <td>
+    <td style="width: 10%;">
       <button type="button" (click)="details(coupon)" class="btn btn-info text-white float-right">Details</button>
     </td>
     <!--<td>-->
@@ -73,6 +73,7 @@
         <!--</div>-->
       <!--</ng-template>-->
     <!--</td>-->
+    <td style="width: 20%;"></td>
   </tr>
 
   </tbody>
