--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -9,7 +9,7 @@
           <h4 *ngIf="fromEdit === false" class="text-muted text-center">Create Coupon</h4>
           <form [formGroup]="couponForm" (ngSubmit)="fromEdit === false ? couponCreateCopy(): saveChange()">
 
-          <!--<form [formGroup]="couponForm" (ngSubmit)="saveChange()">-->
+          <!--<form [formGroup]="tokenForm" (ngSubmit)="saveChange()">-->
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Title</label>
               <div class="col-sm-10">
