--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -37,7 +37,7 @@
               <label class="col-lg-2 col-sm-4 col-form-label">Image</label>
               <div class="col-lg-10 col-sm-8">
 
-                <input type="file"  class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
+                <input type="file"  value="no_image.jpeg" class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
                        [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
 
                 <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
