--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -6,3 +6,11 @@
   font-size: 18px!important;
 }
 
+.btn-generic {
+  margin: 0 auto;
+  padding: 13px;
+  width: 20%;
+  font-size:18px;
+  min-width: 200px;
+}
+
