--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -148,6 +148,18 @@
               </div>
             </div>
 
+            <div class="form-group row">
+
+              <div class="col-sm-10 col-lg-8 my-auto">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="checkVisible" data-md-icheck
+                         (change)="toggleVisibility($event)">
+                  <label class="custom-control-label" for="checkVisible"> Not visible</label>
+
+                </div>
+              </div>
+            </div>
+
             <div class="alert alert-danger col-md-12"
                  *ngIf="submitted && f.valid_from.errors?.MatchDate">Either Valid From or Valid Until contains a data
               already passed.
