--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -151,6 +151,18 @@
               </div>
             </div>
 
+            <div class="form-group row">
+
+              <div class="col-sm-10 col-lg-8 my-auto">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check4" data-md-icheck
+                         (change)="toggleVisibility4($event)">
+                  <label class="custom-control-label" for="check4"> Not visible</label>
+
+                </div>
+              </div>
+            </div>
+
             <div class="alert alert-danger col-md-12"
                  *ngIf="submitted && f.valid_from.errors?.MatchDate">The date inserted in Valid From is already past!
             </div>
