--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -9,7 +9,7 @@
           <h4 *ngIf="fromEdit === false" class="text-muted text-center">Create Coupon</h4>
           <form [formGroup]="couponForm" (ngSubmit)="fromEdit === false ? couponCreateCopy(): saveChange()">
 
-          <!--<form [formGroup]="tokenForm" (ngSubmit)="saveChange()">-->
+            <!--<form [formGroup]="tokenForm" (ngSubmit)="saveChange()">-->
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Title</label>
               <div class="col-sm-10">
@@ -109,16 +109,16 @@
               <label class="col-sm-2 col-form-label">Valid Until:</label>
               <div class="col-sm-2">
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="check1" data-md-icheck
+                  <input type="checkbox" formControlName="valid_until_empty" class="form-check-input" id="check1" data-md-icheck
                          (change)="toggleVisibility($event)">
                   <label class="form-check-label" for="check1">Unlimited</label>
                 </div>
               </div>
               <div class="col-sm-8">
                 <input [readonly]="marked" type="datetime-local" formControlName="valid_until" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors }"/>
-                <div *ngIf="submitted && f.valid_until.errors" class="invalid-feedback">
-                  <div *ngIf="f.valid_until.errors">Date or time is incorrect</div>
+                       [ngClass]="{ 'is-invalid':  submitted && f.valid_until.errors?.MatchDateFromUntil }"/>
+                <div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">
+                  <div *ngIf="f.valid_until.errors?.MatchDateFromUntil">Date or time is incorrect</div>
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
             <!--Please upload an image before create the coupon.-->
             <!--</div>-->
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_until.errors?.MatchQuantity">Quantity incorrect.
+                 *ngIf="submitted && f.quantity.errors?.MatchQuantity">Quantity incorrect.
             </div>
             <div class="form group">
               <p>
