--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
@@ -31,3 +31,22 @@ div.divDateTime {
   font-size:18px;
   min-width: 200px;
 }
+
+.c-input {
+  width: 100%;
+  max-width: 100%;
+  height: 40px;
+  padding: .5em .75em;
+  font-size: 12px;
+  font-weight: bold;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: .25em;
+
+  &--flatpickr {
+    background-image: url( 'https://placehold.it/24x24/333' );
+    background-position: 96% 50%;
+    background-size: 24px;
+    background-repeat: no-repeat;
+  }
+}
