--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="couponPass !== null" class="container">
   <div class="row">
     <div class="col-md-10 offset-1">
       <div class="card mx-4">
@@ -97,7 +97,9 @@
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Valid From:</label>
               <div class="col-sm-10">
-                <input value='' type="datetime-local" formControlName="valid_from" class="form-control"
+                <input style="background: white" type="text" mwlFlatpickr
+                       [clickOpens]="true" [noCalendar]="false"  [convertModelValue]="true" [enableTime]="true"
+                       dateFormat="Y-m-d H:i" formControlName="valid_from" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
                 <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback">
                   <div *ngIf=" f.valid_from.errors ">Date or time is incorrect</div>
@@ -115,7 +117,9 @@
                 </div>
               </div>
               <div class="col-sm-8">
-                <input [readonly]="marked" type="datetime-local" formControlName="valid_until" class="form-control"
+                <input [ngStyle]="{'background': marked ? '#e4e7ea' : 'white' }"  type="text" mwlFlatpickr
+                       [clickOpens]="true" [noCalendar]="false"  [convertModelValue]="true" [enableTime]="true"
+                       dateFormat="Y-m-d H:i" formControlName="valid_until" class="form-control"
                        [ngClass]="{ 'is-invalid':  submitted && f.valid_until.errors?.MatchDateFromUntil }"/>
                 <div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">
                   <div *ngIf="f.valid_until.errors?.MatchDateFromUntil">Date or time is incorrect</div>
