--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -23,38 +23,26 @@
 
         <ng-template #template>
           <div class="modal-header">
-            <h4 class="modal-title pull-left">Add to shopping cart</h4>
+            <h4 class="text-info modal-title pull-left">Add to shopping cart</h4>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
 
           <div class="modal-body">
-            <!--<p>Confirm add to cart Coupon?</p>-->
-            <!--<p>Quantity:-->
-            <!--<input type="number"></p>-->
-
-
-            <!--<form>-->
-              <!--<div class="form-group">-->
-                <!--<label for="formControlRange">Quantity: Max {{coupon.quantity}}</label>-->
-                <!--<input  type="range" min="1" max="{{coupon.quantity}}" value="1" class="form-control-range" id="formControlRange" (input)="setQuantity($event.target.value)">-->
-              <!--<label>Selected: {{quantity}}</label>-->
-              <!--</div>-->
-            <!--</form>-->
-
             <form [formGroup]="myForm" >
-              <div class="form-group">
-                <label class="col-sm-5">Coupons available: {{coupon.quantity}}</label>
+              <label style="color: #999999;"  class=" col-sm-12"> You are adding  <label class="text-info"> {{coupon.title}}</label> to cart.  </label>
+              <div class="form-group col-sm-12">
+
+                <label style="color: #999999;"  class=" col-sm-7">Choose the quantity: <label class="text-info" > ({{coupon.quantity}} available)</label></label>
 
                 <input  formControlName="quantity"
-                        class="col-sm-2"
+                        class="col-sm-2 small inline-button-input"
                         type="number" min="1" max="{{coupon.quantity}}" />
                         <!--(input)="putQuantity($event.target.value, coupon.quantity )"-->
 
-                <!--value="{{refreshQuantity}}"-->
+                <button class="col-sm-1 button-add-del small inline-button-input  " [disabled]="myForm.value.quantity === 1"  style="color: red; margin:0.5%;"  (click)="del()">-</button ><button class="col-sm-1 button-add-del small inline-button-input" [disabled]="isMax"  style="color: green; margin:0.5%;" (click)="add()">+</button>
 
-                <!--<label class="col-sm-5">Selected: {{refreshQuantity}}</label>-->
                 <div >
                 <div style="color: #bd0a0d;
                             text-align: center"  *ngIf="f.quantity.errors">Insert a valid quantity!</div>
