--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -14,3 +14,13 @@
   min-width: 200px;
 }
 
+.inline-button-input {
+  display: inline-block;
+  border-radius: 0.15em;
+  border: 1px solid lightgray;
+
+}
+
+.button-add-del {
+  border-radius: 25em !important;
+}
