--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -37,8 +37,27 @@
               <i class="fa fa-user"></i> Profile</a>
             <a class="dropdown-item" href="#">
               <i class="fa fa-wrench"></i> Settings</a>
-            <a class="dropdown-item" (click)="logout()">
+            <a class="dropdown-item" (click)="openModal(template)">
               <i class="fa fa-lock"></i> Logout</a>
+            <ng-template #template>
+              <div class="modal-header">
+                <h4 class="modal-title pull-left">Confirm logout?</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+                <p>Remember that you will lose your cart when logging out.</p>
+
+              </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+                <button type="button" class="btn btn-success" (click)="logout()">Yes</button>
+              </div>
+            </ng-template>
+
           </div>
         </li>
       </ul>
