cart deleted if cart.length = 0

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -48,7 +48,7 @@
               </div>
 
               <div class="modal-body">
-                <p>Remember that you will lose your cart when logging out.</p>
+                <p class="text-danger ">Remember that you will lose your cart when logging out.</p>
 
               </div>
 
